tracing-wide/tests/ui/non_field.stderr
error[E0277]: the trait bound `NotAValue: tracing_core::field::Value` is not satisfied
 --> tests/ui/non_field.rs:5:1
  |
5 | #[tracing_wide::message(msg = "bad")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `tracing_core::field::Value` is not implemented for `NotAValue`
 --> tests/ui/non_field.rs:3:1
  |
3 | struct NotAValue;
  | ^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `tracing_core::field::Value`:
            &'a T
            &'a mut T
            (dyn std::error::Error + 'static)
            (dyn std::error::Error + Send + 'static)
            (dyn std::error::Error + Send + Sync + 'static)
            (dyn std::error::Error + Sync + 'static)
            Arguments<'_>
            Box<T>
          and $N others
  = note: required for `&NotAValue` to implement `tracing_core::field::Value`
  = note: required for the cast from `&&NotAValue` to `&dyn tracing_core::field::Value`
  = note: this error originates in the macro `$crate::valueset_all` which comes from the expansion of the attribute macro `tracing_wide::message` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotAValue: tracing_wide::Field` is not satisfied
 --> tests/ui/non_field.rs:7:12
  |
7 |     thing: NotAValue,
  |            ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `tracing_core::field::Value` is not implemented for `NotAValue`
 --> tests/ui/non_field.rs:3:1
  |
3 | struct NotAValue;
  | ^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `tracing_core::field::Value`:
            &'a T
            &'a mut T
            (dyn std::error::Error + 'static)
            (dyn std::error::Error + Send + 'static)
            (dyn std::error::Error + Send + Sync + 'static)
            (dyn std::error::Error + Sync + 'static)
            Arguments<'_>
            Box<T>
          and $N others
  = note: required for `NotAValue` to implement `tracing_wide::Field`
note: required by a bound in `__tracing_wide_assert_field`
 --> tests/ui/non_field.rs:5:1
  |
5 | #[tracing_wide::message(msg = "bad")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__tracing_wide_assert_field`
  = note: this error originates in the attribute macro `tracing_wide::message` (in Nightly builds, run with -Z macro-backtrace for more info)
